--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Mainpage.FriendFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="friend" />
+   <android.support.v7.widget.RecyclerView
+       android:id="@+id/friend_list"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-</FrameLayout>
+
+   </android.support.v7.widget.RecyclerView>
+
+
+</RelativeLayout>
