--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".Mainpage.RequestFragment">
 
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/request_recyclerview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="request" />
+</android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
