--- a/app/src/main/res/layout/users_item.xml
+++ b/app/src/main/res/layout/users_item.xml
@@ -23,21 +23,63 @@
             android:id="@+id/users_name"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="80dp"
+            android:layout_marginLeft="90dp"
             android:layout_marginTop="10dp"
             android:text="Name"
             android:textColor="@color/colorBlack"
             android:textSize="17sp" />
 
+        <ImageView
+            android:id="@+id/users_online"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginLeft="76dp"
+            android:layout_marginTop="18dp"
+            android:src="@drawable/green_dot"
+            android:visibility="invisible"
+            />
+
         <TextView
             android:id="@+id/users_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
+            android:layout_marginLeft="90dp"
             android:layout_marginTop="35dp"
             android:text="status"
             android:textColor="@color/colorBlack"
             android:textSize="12sp" />
+        <TextView
+            android:id="@+id/users_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="54dp"
+            android:text="    "
+            android:textColor="@color/colorBlack"
+            android:textSize="12sp" />
+        <Button
+            android:id="@+id/users_accept"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="200dp"
+            android:text="accept"
+            android:textSize="12sp"
+            android:textColor="@color/colorWhite"
+            android:background="@color/colorGrassDark"
+            android:layout_gravity="center_vertical"
+            android:visibility="gone"
+            />
+        <Button
+            android:id="@+id/users_decline"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="280dp"
+            android:text="decline"
+            android:textSize="12sp"
+            android:textColor="@color/colorWhite"
+            android:background="@color/colorBitterSweetDark"
+            android:layout_gravity="center_vertical"
+            android:visibility="gone"/>
 
     </android.support.v7.widget.CardView>
 
