--- a/app/src/main/res/layout/chat_bar.xml
+++ b/app/src/main/res/layout/chat_bar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/colorBlueJeansDark">
+    android:background="@color/colorPrimary">
 
     <TextView
         android:id="@+id/chatbar_display"
@@ -20,13 +20,5 @@
         android:text="Last seen"
         android:textColor="@color/colorWhite"
         android:textSize="13sp" />
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/chatbar_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_alignParentEnd="true"
-        android:src="@mipmap/empty_profile" />
 
 </RelativeLayout>
