--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Mainpage.FriendFragment">
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/friend_swipe"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+
 
    <android.support.v7.widget.RecyclerView
        android:id="@+id/friend_list"
@@ -12,6 +18,6 @@
 
 
    </android.support.v7.widget.RecyclerView>
-
+</android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
