--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -30,8 +30,8 @@
         android:id="@+id/chat_messagelist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/fui_linkColor"
-        android:alpha="50">
+        android:background="#CCDDFF"
+        >
 
     </android.support.v7.widget.RecyclerView>
 
@@ -51,7 +51,7 @@
         android:id="@+id/chat_ib_plus"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1.3"
+        android:layout_weight="1.5"
         android:alpha="0.5"
         android:background="@color/colorWhite"
         android:elevation="7dp"
@@ -60,7 +60,7 @@
     <EditText
         android:id="@+id/chat_text"
         android:layout_width="0dp"
-        android:layout_weight="7.6"
+        android:layout_weight="7.0"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_gravity="bottom"
@@ -70,7 +70,7 @@
     <ImageButton
         android:id="@+id/chat_ib_send"
         android:layout_width="0dp"
-        android:layout_weight="1.3"
+        android:layout_weight="1.7"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:elevation="7dp"
