--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,10 +21,10 @@
         android:elevation="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.564" />
+        app:layout_constraintVertical_bias="0.101" />
 
     <android.support.design.widget.TextInputLayout
 
@@ -75,7 +75,7 @@
         android:id="@+id/login_button_login"
         style="@android:style/Widget.Holo.Button.Borderless.Small"
         android:layout_width="312dp"
-        android:layout_height="wrap_content"
+        android:layout_height="51dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="24dp"
         android:background="@color/colorGrapeFruit"
